--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -29,7 +29,17 @@ scrape_configs:
     static_configs:
       - targets:
         - localhost:3000
-
+  
+  - job_name: 'app_nodejs'
+    scrape_interval: 5s
+    static_configs:
+      - targets: ['localhost:8001'] 
+      
+  - job_name: pushgateway
+    honor_labels: false
+    static_configs:
+    - targets: ['localhost:9091']
+        
 alerting:
   alertmanagers:
   - static_configs:
